<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signIn"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/blue_round_button"
        android:backgroundTint="@color/sky"
        android:text="@string/signIn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edtText_passwordLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter"
        android:gravity="center_horizontal"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="SIGN IN"
        android:textColor="@color/sky"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="363dp"
        android:layout_height="304dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">


    </View>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTxt_emailLayout"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        app:hintTextColor="@color/sky"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        >
        <EditText
            android:id="@+id/edtTxt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/sign_in_hint_email"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHint="@color/sky"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtText_passwordLayout"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:hintTextColor="@color/sky"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_emailLayout"
        app:passwordToggleDrawable="@drawable/sign_in_eye_hint"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_edit_text"
            android:drawableRight="@drawable/sign_in_eye_hint"
            android:hint="@string/sign_in_hint_password"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/sky"

            android:textColorHint="@color/sky" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_remember"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edtText_passwordLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="499dp"
        android:layout_height="476dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn"
        app:srcCompat="@drawable/sign_in_background" />

    <Button
        android:id="@+id/btn_forget"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_forget"
        android:textAllCaps="false"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/edtText_passwordLayout" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="68dp"
        android:text="Chưa có tài khoản ? Hãy "
        app:layout_constraintStart_toStartOf="@+id/btn_signIn"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:clickable="true"
        android:text="Đăng ký"
        android:textColor="@color/sky"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="Quên mật khẩu ?"
        android:textColor="@color/sky"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/btn_signIn"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />


</androidx.constraintlayout.widget.ConstraintLayout>